YALPParser.py
# Generated from YALP.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class YALPParser ( Parser ):

    grammarFileName = "YALP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "';'", "'}'", "'('", "','", "')'", 
                     "':'", "'['", "' ]'", "'@'", "'.'", "'~'", "'*'", "'/'", 
                     "'+'", "'-'", "'<='", "'<'", "'='", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'<-'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "WS", "CLASS", "NOT", "IF", "FI", "THEN", "ELSE", 
                      "WHILE", "LET", "IN", "INHERITS", "LOOP", "POOL", 
                      "NEW", "TRUE", "FALSE", "ISVOID", "STRING", "INT", 
                      "TYPE", "ID", "ASSIGNMENT" ]

    RULE_prog = 0
    RULE_class = 1
    RULE_feature = 2
    RULE_formal = 3
    RULE_expr = 4

    ruleNames =  [ "prog", "class", "feature", "formal", "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    WS=20
    CLASS=21
    NOT=22
    IF=23
    FI=24
    THEN=25
    ELSE=26
    WHILE=27
    LET=28
    IN=29
    INHERITS=30
    LOOP=31
    POOL=32
    NEW=33
    TRUE=34
    FALSE=35
    ISVOID=36
    STRING=37
    INT=38
    TYPE=39
    ID=40
    ASSIGNMENT=41

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(YALPParser.EOF, 0)

        def class_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YALPParser.ClassContext)
            else:
                return self.getTypedRuleContext(YALPParser.ClassContext,i)


        def getRuleIndex(self):
            return YALPParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = YALPParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 11 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 10
                self.class_()
                self.state = 13 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==21):
                    break

            self.state = 15
            self.match(YALPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(YALPParser.CLASS, 0)

        def TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(YALPParser.TYPE)
            else:
                return self.getToken(YALPParser.TYPE, i)

        def INHERITS(self):
            return self.getToken(YALPParser.INHERITS, 0)

        def feature(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YALPParser.FeatureContext)
            else:
                return self.getTypedRuleContext(YALPParser.FeatureContext,i)


        def getRuleIndex(self):
            return YALPParser.RULE_class

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass" ):
                listener.enterClass(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass" ):
                listener.exitClass(self)




    def class_(self):

        localctx = YALPParser.ClassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_class)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 17
            self.match(YALPParser.CLASS)
            self.state = 18
            self.match(YALPParser.TYPE)
            self.state = 21
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==30:
                self.state = 19
                self.match(YALPParser.INHERITS)
                self.state = 20
                self.match(YALPParser.TYPE)


            self.state = 23
            self.match(YALPParser.T__0)
            self.state = 29
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==40:
                self.state = 24
                self.feature()
                self.state = 25
                self.match(YALPParser.T__1)
                self.state = 31
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 32
            self.match(YALPParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FeatureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(YALPParser.ID, 0)

        def TYPE(self):
            return self.getToken(YALPParser.TYPE, 0)

        def expr(self):
            return self.getTypedRuleContext(YALPParser.ExprContext,0)


        def formal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YALPParser.FormalContext)
            else:
                return self.getTypedRuleContext(YALPParser.FormalContext,i)


        def ASSIGNMENT(self):
            return self.getToken(YALPParser.ASSIGNMENT, 0)

        def getRuleIndex(self):
            return YALPParser.RULE_feature

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFeature" ):
                listener.enterFeature(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFeature" ):
                listener.exitFeature(self)




    def feature(self):

        localctx = YALPParser.FeatureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_feature)
        self._la = 0 # Token type
        try:
            self.state = 64
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 34
                self.match(YALPParser.ID)
                self.state = 35
                self.match(YALPParser.T__3)
                self.state = 46
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==40:
                    self.state = 36
                    self.formal()
                    self.state = 41
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==5:
                        self.state = 37
                        self.match(YALPParser.T__4)
                        self.state = 38
                        self.formal()
                        self.state = 43
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 48
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 49
                self.match(YALPParser.T__5)
                self.state = 50
                self.match(YALPParser.T__6)
                self.state = 51
                self.match(YALPParser.TYPE)
                self.state = 52
                self.match(YALPParser.T__0)
                self.state = 53
                self.expr(0)
                self.state = 54
                self.match(YALPParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 56
                self.match(YALPParser.ID)
                self.state = 57
                self.match(YALPParser.T__6)
                self.state = 58
                self.match(YALPParser.TYPE)
                self.state = 59
                self.match(YALPParser.T__7)
                self.state = 60
                self.match(YALPParser.ASSIGNMENT)
                self.state = 61
                self.expr(0)
                self.state = 62
                self.match(YALPParser.T__8)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(YALPParser.ID, 0)

        def TYPE(self):
            return self.getToken(YALPParser.TYPE, 0)

        def getRuleIndex(self):
            return YALPParser.RULE_formal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormal" ):
                listener.enterFormal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormal" ):
                listener.exitFormal(self)




    def formal(self):

        localctx = YALPParser.FormalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_formal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(YALPParser.ID)
            self.state = 67
            self.match(YALPParser.T__6)
            self.state = 68
            self.match(YALPParser.TYPE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.bool_ = None # Token
            self.op = None # Token

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(YALPParser.ID)
            else:
                return self.getToken(YALPParser.ID, i)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YALPParser.ExprContext)
            else:
                return self.getTypedRuleContext(YALPParser.ExprContext,i)


        def IF(self):
            return self.getToken(YALPParser.IF, 0)

        def THEN(self):
            return self.getToken(YALPParser.THEN, 0)

        def ELSE(self):
            return self.getToken(YALPParser.ELSE, 0)

        def FI(self):
            return self.getToken(YALPParser.FI, 0)

        def WHILE(self):
            return self.getToken(YALPParser.WHILE, 0)

        def LOOP(self):
            return self.getToken(YALPParser.LOOP, 0)

        def POOL(self):
            return self.getToken(YALPParser.POOL, 0)

        def LET(self):
            return self.getToken(YALPParser.LET, 0)

        def TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(YALPParser.TYPE)
            else:
                return self.getToken(YALPParser.TYPE, i)

        def IN(self):
            return self.getToken(YALPParser.IN, 0)

        def ASSIGNMENT(self, i:int=None):
            if i is None:
                return self.getTokens(YALPParser.ASSIGNMENT)
            else:
                return self.getToken(YALPParser.ASSIGNMENT, i)

        def NEW(self):
            return self.getToken(YALPParser.NEW, 0)

        def ISVOID(self):
            return self.getToken(YALPParser.ISVOID, 0)

        def NOT(self):
            return self.getToken(YALPParser.NOT, 0)

        def INT(self):
            return self.getToken(YALPParser.INT, 0)

        def STRING(self):
            return self.getToken(YALPParser.STRING, 0)

        def TRUE(self):
            return self.getToken(YALPParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(YALPParser.FALSE, 0)

        def getRuleIndex(self):
            return YALPParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = YALPParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 71
                self.match(YALPParser.ID)
                self.state = 72
                self.match(YALPParser.T__3)

                self.state = 73
                self.expr(0)
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==5:
                    self.state = 74
                    self.match(YALPParser.T__4)
                    self.state = 75
                    self.expr(0)
                    self.state = 80
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 81
                self.match(YALPParser.T__5)
                pass

            elif la_ == 2:
                self.state = 83
                self.match(YALPParser.IF)
                self.state = 84
                self.expr(0)
                self.state = 85
                self.match(YALPParser.THEN)
                self.state = 86
                self.expr(0)
                self.state = 87
                self.match(YALPParser.ELSE)
                self.state = 88
                self.expr(0)
                self.state = 89
                self.match(YALPParser.FI)
                pass

            elif la_ == 3:
                self.state = 91
                self.match(YALPParser.WHILE)
                self.state = 92
                self.expr(0)
                self.state = 93
                self.match(YALPParser.LOOP)
                self.state = 94
                self.expr(0)
                self.state = 95
                self.match(YALPParser.POOL)
                pass

            elif la_ == 4:
                self.state = 97
                self.match(YALPParser.T__0)
                self.state = 101 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 98
                    self.expr(0)
                    self.state = 99
                    self.match(YALPParser.T__4)
                    self.state = 103 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 1641092747282) != 0)):
                        break

                self.state = 105
                self.match(YALPParser.T__2)
                pass

            elif la_ == 5:
                self.state = 107
                self.match(YALPParser.LET)
                self.state = 108
                self.match(YALPParser.ID)
                self.state = 109
                self.match(YALPParser.T__6)
                self.state = 110
                self.match(YALPParser.TYPE)
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==41:
                    self.state = 111
                    self.match(YALPParser.ASSIGNMENT)
                    self.state = 112
                    self.expr(0)


                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==5:
                    self.state = 115
                    self.match(YALPParser.T__4)
                    self.state = 116
                    self.match(YALPParser.ID)
                    self.state = 117
                    self.match(YALPParser.T__6)
                    self.state = 118
                    self.match(YALPParser.TYPE)
                    self.state = 121
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==41:
                        self.state = 119
                        self.match(YALPParser.ASSIGNMENT)
                        self.state = 120
                        self.expr(0)


                    self.state = 127
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 128
                self.match(YALPParser.IN)
                self.state = 129
                self.expr(13)
                pass

            elif la_ == 6:
                self.state = 130
                self.match(YALPParser.NEW)
                self.state = 131
                self.match(YALPParser.TYPE)
                pass

            elif la_ == 7:
                self.state = 132
                self.match(YALPParser.T__11)
                self.state = 133
                self.expr(11)
                pass

            elif la_ == 8:
                self.state = 134
                self.match(YALPParser.ISVOID)
                self.state = 135
                self.expr(10)
                pass

            elif la_ == 9:
                self.state = 136
                self.match(YALPParser.NOT)
                self.state = 137
                self.expr(6)
                pass

            elif la_ == 10:
                self.state = 138
                self.match(YALPParser.T__3)
                self.state = 139
                self.expr(0)
                self.state = 140
                self.match(YALPParser.T__5)
                pass

            elif la_ == 11:
                self.state = 142
                self.match(YALPParser.ID)
                pass

            elif la_ == 12:
                self.state = 143
                self.match(YALPParser.INT)
                pass

            elif la_ == 13:
                self.state = 144
                self.match(YALPParser.STRING)
                pass

            elif la_ == 14:
                self.state = 145
                localctx.bool_ = self._input.LT(1)
                _la = self._input.LA(1)
                if not(_la==34 or _la==35):
                    localctx.bool_ = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 177
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,15,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 175
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
                    if la_ == 1:
                        localctx = YALPParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 148
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 149
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==13 or _la==14):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 150
                        self.expr(10)
                        pass

                    elif la_ == 2:
                        localctx = YALPParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 151
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 152
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==15 or _la==16):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 153
                        self.expr(9)
                        pass

                    elif la_ == 3:
                        localctx = YALPParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 154
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 155
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 917504) != 0)):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 156
                        self.expr(8)
                        pass

                    elif la_ == 4:
                        localctx = YALPParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 157
                        if not self.precpred(self._ctx, 18):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 18)")
                        self.state = 160
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==10:
                            self.state = 158
                            self.match(YALPParser.T__9)
                            self.state = 159
                            self.match(YALPParser.TYPE)


                        self.state = 162
                        self.match(YALPParser.T__10)
                        self.state = 163
                        self.match(YALPParser.ID)
                        self.state = 164
                        self.match(YALPParser.T__3)

                        self.state = 165
                        self.expr(0)
                        self.state = 170
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while _la==5:
                            self.state = 166
                            self.match(YALPParser.T__4)
                            self.state = 167
                            self.expr(0)
                            self.state = 172
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)

                        self.state = 173
                        self.match(YALPParser.T__5)
                        pass

             
                self.state = 179
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,15,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[4] = self.expr_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expr_sempred(self, localctx:ExprContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 9)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 8)
         

            if predIndex == 2:
                return self.precpred(self._ctx, 7)
         

            if predIndex == 3:
                return self.precpred(self._ctx, 18)
         




